styles.css
/* ... */
.flickity-prev-next-button:hover {
  background: transparent;
  opacity: 1;
}
/* arrow color */
.flickity-prev-next-button .arrow {
  fill: white;
}
.flickity-prev-next-button.no-svg {
  color: white;
}
/* closer to edge */
.flickity-prev-next-button.previous { left: 0; }
.flickity-prev-next-button.next { right: 0; }
/* hide disabled button */
.flickity-prev-next-button:disabled {
  display: none;
}

#projects {
  z-index: 1;
  background-color: black;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
  overflow: hidden;
  right: 0;
  left: 0;
  margin: auto;
  min-height: 100dvh;
}

#projects-box {
  z-index: 1;
  background-color: black;
  color: white;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
  overflow: hidden;
  right: 0;
  left: 0;
  margin: 0px;
  padding: 0px;
  min-height: 100%;
}

.projects-header {
  padding-top: 1rem;
  padding-bottom: 4rem;
  margin-top: 3rem;
}

.carousel {
  width: 100%;
  height: 31.2rem;
}
.flickity-page-dots {
  bottom: 0 !important;
}

#contact {
  z-index: 3;
  background-color: #d9dadb;
  color: #fc9d10;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
  overflow: hidden;
  right: 0;
  left: 0;
  margin: auto;
  min-height: 100dvh;
  padding: 2rem;
}


.btn-disabled {
  background-color: #ccc !important; 
  cursor: not-allowed !important;
}

#message {
  height: 12rem;
  min-width: 16rem;
  resize: none;
}

#contact {
  background: linear-gradient(to right,rgba(245,245,245,.8),rgba(245,245,245,.8)),url("img/contact_background_compressed.jpg");;
  background-size: cover;
  background-repeat: no-repeat;
}

#contact-form-body {
  max-width: 50rem;
  width: 95%;
}

.contact-body {
  padding: 2.5rem;
  padding-bottom: 1rem;
  margin-left: 0;
  margin-right: 0;
  box-shadow: 0px 0px 10px rgba(142, 142, 143, 0.4);
}

.seperator {
  display: flex;
  position: relative;
  width: 1.5rem;
  height: 4px;
  background-color: coral;
  left: 50%;
  transform: translate(-50%);
  border-radius: .2rem;
  margin-bottom: 1rem;
}

.entry-name {
  display: flex;
  position: relative;
  left: 0;
  font-size: .8rem;
  margin-bottom: .2rem;
  font-weight: 700;
  color: #6a6a6a;
}

.form-group {
  margin-bottom: 0.7rem;
}

.form-control {
  font-weight: 600;
  font-size: .8rem;
  max-width: 100%;
  background: #f0f0f0;
  border-color: #f0f0f0;
  padding: 1.3rem;
}

.submit-box {
  display: flex;
  justify-content: right;
}

.submit-button {
  width: 30%;
  padding-top: .8rem;
  padding-bottom: .8rem;
  font-size: 1rem;
  font-weight: 600;
  border-radius: .3rem;
  border-width: 0;
  background: coral;
}

.submit-button:hover {
  background: rgb(211, 72, 21);
}

.submit-button:active {
  background: rgb(177, 59, 16) !important;
}

@media (max-width: 600px) {
  .submit-button {
    width: 100%;
  }
}

#successMsg {
  margin-top: 3rem;
}

.footer {
  background-color: #ffffff;
}

.footer-body {
  align-items: center;
  justify-content: center;
  text-align: center;
  display: flex;
  flex-wrap: wrap;
}

#footer-link {
  text-decoration: none;
}

#footer-link:hover {
  text-decoration: underline;
}

#footer-link2 {
  text-decoration: none;
}

#footer-link2:hover {
  text-decoration: underline;
}

.footer-body-1 {
  order: 1;
}

.footer-body-2 {
  order: 2;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding-top: 1rem;
}

.footer-body-3 {
  order: 3;
  padding-top: 1rem;
}

@media screen and ( max-width: 575px ) {
  .footer-body-1 {
    order: 3;
  }
  
  .footer-body-2 {
    order: 1;
  }
  
  .footer-body-3 {
    order: 2;
    padding-top: 1rem;
  }
}

.modal {
  display: none; /* Hide the modal by default */
  position: fixed;
  z-index: 9999;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
}

.modal-content {
  display: flex;
  position: absolute;
  justify-content: center;
  align-items: center;
  top: 0%;
  background-color: #fff; /* Modal content background color */
}

.modal-body {
  display: flex;
  justify-content: center;
}

#x-button {
  position: absolute;
  top: 0;
  right: 0;
  background-color: rgba(14, 12, 10, 0);
  height: 4rem;
  width: 4rem;
  font-size: 3rem;
  border: 0px solid white;
}

body.modal-open {
  overflow: hidden;
}

#ship-img {
  display: flex;
  justify-content: center;
  align-items: center;
}

#name::placeholder, #email::placeholder, #company::placeholder, #message::placeholder {
  color: #a9a9a9;
  opacity: 1;
}

/* {
  border: 1px solid red !important;
}

